<resources>
    <string name="app_name">InternshipTask</string>
    <string name="default_web_client_id">640732904234-6ndc405msmoqrronqijsie99agc9sonl.apps.googleusercontent.com</string>
        <string name="fill_all_fields">Please fill all fields</string>
        <string name="invalid_email">Invalid Email</string>
        <string name="password_strength_error">Password must contain uppercase, number, and special character</string>
        <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="verify_email">Verify your email</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="user_name">User Name</string>
    <string name="username">Username</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="this_is_a_sample_comment">This is a sample comment.</string>
    <string name="itemuser_name">User Name</string>
    <string name="post_content_goes_here">Post content goes here...</string>
    <string name="_2_hours_agopost">2 hours ago</string>
    <string name="_0">0</string>
    <string name="logo">Logo</string>
    <string name="pipel">Pipel</string>
    <string name="home">Home</string>
    <string name="no_posts_yet">No posts yet</string>
    <string name="new_post">New Post</string>
    <string name="write_your_post">Write your post...</string>
    <string name="select_image">Select Image</string>
    <string name="selected_post_image">Selected post image</string>
    <string name="upload_post">Upload Post</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="usernameprofile">Username</string>
    <string name="user_bio">User bio ...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="follow">Follow</string>
    <string name="no_posts_found">No posts found</string>
    <string name="set_up_your_profile">Set Up Your Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="save_profile">Save Profile</string>
    <string name="pipel1">Pipel</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email_to_receive_a_reset_link">Enter your email to receive a reset link</string>
    <string name="email">Email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="pipel3">Pipel</string>
    <string name="hello_there_nwelcome_back">HELLO THERE,\nWelcome BACK</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New user? SIGN UP</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="send1">Send</string>
    <string name="loading">Loading...</string>
    <string name="get_started">Get Started</string>
    <string name="with_pipel_you_will_find_new_friends_from_various_countries_and_regions_of_the_world">With pipel you will find new friends from various countries and regions of the world</string>
    <string name="best_social_app_to_make_new_friends">Best Social App to Make New Friends</string>
    <string name="pipel2">Pipel</string>
    <string name="messages">MESSAGES</string>
    <string name="search_users">Search Users</string>
    <string name="search_users1">Search users</string>
    <string name="pipel4">Pipel</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_up_to_start_your_new_journey">Sign Up to start your new Journey</string>
    <string name="email2">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="chat1">Chat</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="profile1">Profile</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="home1">Home</string>
    <string name="chat2">Chat</string>

</resources>
