<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">

        <item
        android:id="@+id/action_chat"
        android:title="@string/chat1"
        android:icon="@drawable/send_11924745"
        app:showAsAction="always" />
    <!-- Profile -->
    <item
        android:id="@+id/action_profile"
        android:title="@string/my_profile"
        android:icon="@drawable/circle_user_9821492"
        app:showAsAction="never" />

    <!-- Logout -->
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/log_out_15379340"
        app:showAsAction="never" />

</menu>
