<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/comment_item_bg">

    <!-- Profile Image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/commentUserImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:shapeAppearanceOverlay="@style/CircularImage"
        android:layout_marginEnd="8dp" />


    <!-- Comment Details -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Username and Delete Icon Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/commentUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/calistoga"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/deleteCommentIcon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/delete_comment"
                android:src="@drawable/delete_6861362"
                android:visibility="gone" />
        </LinearLayout>

        <!-- Comment Text -->
        <TextView
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_a_sample_comment"
            android:textSize="14sp"
            android:fontFamily="@font/calistoga"
            android:textColor="@color/black"
            android:layout_marginTop="2dp" />

        <!-- Time -->
        <TextView
            android:id="@+id/commentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_hours_ago"
            android:fontFamily="@font/calistoga"
            android:textSize="12sp"
            android:textColor="#888888"
            android:layout_marginTop="2dp" />
    </LinearLayout>

</LinearLayout>
