<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">
    <TextView
        android:id="@+id/commentHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:fontFamily="@font/calistoga"
        android:paddingBottom="8dp"
        android:text="@string/comments"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alkatra_semibold"
            android:textSize="19sp"
            android:hint="@string/write_a_comment" />

        <Button
            android:id="@+id/sendCommentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/agbalumo"
            android:textSize="18sp"
            android:background="@drawable/btn_gradient"
            app:backgroundTint="@null"/>
    </LinearLayout>
</LinearLayout>
